fix: fixed an issue with words not wrapping properly

--- a/app/styles/text.css
+++ b/app/styles/text.css
@@ -4,6 +4,7 @@
   /* May change during runtime. */
   --global-font-size: 'medium';
   font-size: var(--global-font-size);
+  word-wrap: break-word;
 }
 
 html * {
